src/Money.Blazor.Host/wwwroot/css/site.scss
/* ... */
.nav-tabs > li > a:hover {
    cursor: pointer;
}

.nav-tabs > li.active > a:hover {
    cursor: default;
}

.header {
    min-width: $bodyMinWidth;
    padding: 14px 0;
    background: rgba(var(--bs-emphasis-color-rgb), 0.075);
    border-bottom: 1px solid var(--bs-border-color-translucent);

    .icon {
        font-size: 26px;
        color: #0078D7;
    }

    h3 {
        line-height: 1.25;
        margin-bottom: 0;
        flex: 1;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    h6 {
        width: 100%;
        margin-top: .5rem;
        margin-bottom: 0;
        text-overflow: ellipsis;
        line-height: 1.25;
        white-space: nowrap;
        overflow: hidden;
    }
}

.header-append {
    margin-bottom: 150px;
}

.header-append-small {
    margin-bottom: 110px;
}

.header-append-mobile {
    margin-bottom: 40px;
}

.bottom-bar {
    z-index: 1050;
    background: var(--bs-body-bg);
    border-top: 1px solid var(--bs-border-color-translucent);

    .items-6, .items-5, .items-4, .items-3 {
        span.text {
            display: none;
        }
    }
}

.offcanvas-bottom-menu {
    --bs-offcanvas-height: auto;
    bottom: 54px;
}

.center {
    text-align: center;
}

.gray {
    opacity: 0.7;
}

.table {
    .btn-link {
        padding: 0;
    }

    .min-column {
        max-width: 1px;
    }
}

.alert {
    .nav {
        margin-top: -7px;
        margin-bottom: -7px;

        .btn-link {
            color: $actionButtonColor;
        }
    }
}

.back-dark {
    color: #eee !important;

    .btn-link {
        color: #eee !important;
    }
}

.back-light {
    color: #212529 !important;
}

.btn-icon, .btn-color {
    width: 48px;
    height: 48px;
    margin: 3px;
}

.btn-icon {
    font-size: 1.6em;
    padding: 0;
}

.btn-selectable {
    border-radius: 4px;
    border: 2px solid transparent;
}

.btn-selectable:focus,
.btn-selectable:hover {
    text-decoration: none;
}

.btn-selectable.btn-selectable-selected,
.btn-selectable:focus,
.btn-selectable:hover {
    position: relative;
    outline: none;
    border-color: black;
}

.btn-selectable.btn-selectable-selected::before,
.btn-selectable:focus::before,
.btn-selectable:hover::before {
    content: " ";
    content: "✓";
    padding: 2px;
    background: black;
    border-radius: 0 0 4px 0;
    position: absolute;
    left: 0;
    top: 0;
    color: white;
    font-size: 11px;
}

.card {
    margin-bottom: 15px;

    .nav {
        margin-top: -7px;
        margin-bottom: -7px;

        .btn-link {
            color: $actionButtonColor;
        }
    }

    p:last-child {
        margin: 0;
    }

    &.card-hover:hover {
        background-color: rgba(var(--bs-emphasis-color-rgb), 0.075);
    }
}

.sort, .dropdown {
    a {
        cursor: pointer;
    }
}


.summary {
    .months {
        padding-right: 70px;
    }

    .graph {
        margin-bottom: -15px;
    }
}

.bar-graph {
    margin: 0;
    border-width: 1px 0 0 0;
    border-radius: 0;
    box-shadow: none;
    cursor: pointer;

    .icon {
        display: inline-block;
        width: 40px;
        text-align: center;
        line-height: 1;
    }

    $barHeight: 10px;

    .bar-cover {
        height: $barHeight;
    }

    .bar {
        height: $barHeight;
        float: right;
        clear: both;
        transition: width 1s;
        border-radius: 3px;
    }

    &:hover {
        background-color: rgba(var(--bs-emphasis-color-rgb), 0.075);
    }
}

.bar-graph-summary {
    border: none;
}

.container-narrow {
    max-width: 900px;
    margin: 0 auto;

    .sort {
        float: right;
    }
}

.cards {
    margin: 20px 0;

    > .row {
        border-bottom: 1px solid var(--bs-border-color) !important;

        &:first-child {
            border-top: 1px solid var(--bs-border-color) !important;
        }

        &:hover {
            background: rgba(var(--bs-emphasis-color-rgb), 0.075);
        }
    }
}

.controls {
    .btn-link {
        color: $actionButtonColor;
    }
}

.checklist-completed > *:not(.controls) {
    opacity: 0.5;
}

@media (max-width: 767px) {
    .modal .btn-primary {
        flex: 1 1 auto !important; // flex-fill
    }
}

.modal .modal-overflow .modal-body {
    max-height: calc(100vh - 142px - 1rem);
    overflow: auto;
}

@media (min-width: 576px) {
    .modal .modal-overflow .modal-body {
        max-height: calc(100vh - 142px - 2.5rem);
    }
}

.vertical-bar {
    display: flex;
    align-items: flex-end;
}

.cursor-pointer {
    cursor: pointer;
}

.expense-wizard-validation-error {
    position: absolute;
    font-size: .75rem;
}

@media (min-width: 576px) {
    .ratio-sm {
        position: relative;
        width: 100%;
    }
    
    .ratio-sm::before {
        display: block;
        padding-top: var(--bs-aspect-ratio);
        content: "";
    }

    .ratio-sm > * {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
    }
}

/* ------ SPLASH SCREEN ------------------------------------------------------------------------ */

.splash {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    background: $backgroundColor;
    z-index: 1060;
    transition: height 1s, opacity 0.5s linear 1s, margin-top 0.1s linear 2s;

    .app-title {
        position: absolute;
        bottom: 40px;
        width: 100vw;
        text-align: center;
        color: white;
        font-size: 1.6rem;
        font-weight: lighter;
        transition: opacity 0.5s;
    }

    img {
        width: 274px;
        height: 274px;
        transition: opacity 0.5s, width 0.5s, height 0.5s;
    }

    &.animate {
        height: 56px;
        opacity: 0;
        margin-top: -60px;

        .app-title, img {
            opacity: 0;
        }

        img {
            width: 56px;
            height: 56px;
        }
    }
}
/* ... */

